mis a jour de la route des images

--- a/html&css/draggable/index.html
+++ b/html&css/draggable/index.html
@@ -10,35 +10,35 @@
     <ul class="list-numbers">
         <li class="item" draggable="true">
             <div class="details">
-                <img src="../../images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
                 <span> Jhon Doe</span>
             </div>
            <p>+</p>
         </li>
         <li class="item" draggable="true">
             <div class="details">
-                <img src="../../images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
                 <span> Janette Doe</span>
             </div>
            <p>+</p>
         </li>
         <li class="item" draggable="true">
             <div class="details">
-                <img src="../../images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
                 <span> Anna Steal</span>
             </div>
            <p>+</p>
         </li>
         <li class="item" draggable="true">
             <div class="details">
-                <img src="../../images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
                 <span> Christian Grey</span>
             </div>
            <p>+</p>
         </li>
         <li class="item" draggable="true">
             <div class="details">
-                <img src="../../images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
                 <span> Nom & Prenoms</span>
             </div>
            <p>+</p>
